--- a/ProjectPRJ301/web/WEB-INF/web.xml
+++ b/ProjectPRJ301/web/WEB-INF/web.xml
@@ -32,6 +32,10 @@
         <servlet-name>EditTeacherController</servlet-name>
         <servlet-class>controllers.EditTeacherController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Admin_AccountController</servlet-name>
+        <servlet-class>controllers.Admin_AccountController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>AdminController</servlet-name>
         <url-pattern>/adminController</url-pattern>
@@ -63,5 +67,9 @@
     <servlet-mapping>
         <servlet-name>EditTeacherController</servlet-name>
         <url-pattern>/EditTeacherController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Admin_AccountController</servlet-name>
+        <url-pattern>/Admin_AccountController</url-pattern>
     </servlet-mapping>
 </web-app>
